--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,5 @@
 {
     "user": "postgres",
-    "connection": "dbname=arduino user=postgres password=poilo777 host=localhost sslmode=disable",
+    "connection": "dbname=arduino user=postgres password=password host=localhost sslmode=disable",
     "port": ":8080"
 }
